save bug overflow

--- a/app/assets/stylesheets/old/_old-main.scss
+++ b/app/assets/stylesheets/old/_old-main.scss
@@ -1,7 +1,6 @@
 .old-container {
   background-color: #DAD1B4;
   position: relative;
-  overflow: hidden;
 }
 
 .old-nuage-haut-gauche-container {
